--- a/index/index.html
+++ b/index/index.html
@@ -6,7 +6,7 @@
   <meta content="jewelry, sale, online" />
   <meta description="jewelry-for-sale" />
   <title>Zoe's Jewelry</title>
-  <link rel="stylesheet" type="text/css" href="css\main.css">
+  <link rel="stylesheet" type="text/css" href="zoes-jewelry\css\main.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 </head>
 
