paths and files changed

--- a/index/earrings.html
+++ b/index/earrings.html
@@ -43,7 +43,6 @@
                     <input type="button" value="Add to cart" id="btn-9">
                 </div>
             </div>
-        <a href="../index/index.html">Go Back</a>
-        <script src="./earrings.js"></script>
+        <a href="/index/index.html">Go Back</a>
     </body>
 </html>
