--- a/index/index.html
+++ b/index/index.html
@@ -6,7 +6,7 @@
   <meta content="jewelry, sale, online" />
   <meta description="jewelry-for-sale" />
   <title>Zoe's Jewelry</title>
-  <link rel="stylesheet" type="text/css" href="css\main.css">
+  <link rel="stylesheet" type="text/css" href="./main.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 </head>
 
@@ -33,7 +33,7 @@
         <p>Summer Collection</p>
         <p>Casual collection</p>
         <p>Rings collection coming soon</p>
-        <a onclick="alert('you are leaving this page');" href="../photos/earrings.html"><strong>Click for
+        <a onclick="alert('you are leaving this page');" href="./earrings.html"><strong>Click for
             catalogue</strong></a>
       </ol>
     </div>
@@ -44,7 +44,7 @@
         <p>Fashion collection</p>
         <p>Handmade collection</p>
         <p>Rings collection coming soon</p>
-        <a href="../photos/necklace.html">Click for catalogue</a>
+        <a href="./necklace.html">Click for catalogue</a>
       </ol>
     </div>
   </div>
