--- a/index/earrings.html
+++ b/index/earrings.html
@@ -12,7 +12,7 @@
     
 <body>
      <div class="flex-container">
-            <div href="../index/index.html">Home</div>
+            <div href="./index.html">Home</div>
             <div>About Us</div>
             <div>Catalogs</div>
     </div>>
@@ -43,6 +43,6 @@
                     <input type="button" value="Add to cart" id="btn-9">
                 </div>
             </div>
-        <a href="/index/index.html">Go Back</a>
+        <a href="./index.html">Go Back</a>
     </body>
 </html>
