--- a/index/necklace.html
+++ b/index/necklace.html
@@ -15,7 +15,7 @@
      <div>Coming soon with more items  ,more stylish,better combinations.For orders please look at our contacts methods.Free shipping.A little pidgeon  will fly your item directly at your house. Just a joke this is a test tab and you dont have to read all this stuff.Sorry I said this in the end.</div>
     </div>
      <div class="flex-container">
-         <div><a href=../index/index.html>Home</a></div>
+         <div><a href="index.html">Home</a></div>
             <div>About Us</div>
             <div>Catalogs</div>
     </div>
@@ -43,5 +43,5 @@
          <li>Add to cart</li>
     
     </div>
-        <a href="../index/index.html">Go Back</a>
+        <a href="index.html">Go Back</a>
     </body>
