--- a/index/earrings.html
+++ b/index/earrings.html
@@ -6,13 +6,13 @@
     <meta content="jewelry, sale, online" />
     <meta description="jewelry-for-sale" />
     <title>Zoe's Jewelry</title>
-    <link rel="stylesheet" type="text/css" href="../css/earrings.css">
+    <link rel="stylesheet" type="text/css" href="earrings.css">
     
     </head>
     
 <body>
      <div class="flex-container">
-            <div href="./index.html">Home</div>
+            <div> <a href="index.html">Home</a></div>
             <div>About Us</div>
             <div>Catalogs</div>
     </div>>
