--- a/index/index.html
+++ b/index/index.html
@@ -33,7 +33,7 @@
         <p>Summer Collection</p>
         <p>Casual collection</p>
         <p>Rings collection coming soon</p>
-        <a onclick="alert('you are leaving this page');" href="./earrings.html"><strong>Click for
+        <a onclick="alert('you are leaving this page');" href="earrings.html"><strong>Click for
             catalogue</strong></a>
       </ol>
     </div>
