--- a/index/javascript.html
+++ b/index/javascript.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link href="/favicon.ico" type="image/x-icon" rel="icon" />
-        <link rel="stylesheet" type="text/css" href="../css/javascript.css"/>
+        <link rel="stylesheet" type="text/css" href="javascript.css">
     </head>
 <body>
     
