--- a/index/necklace.html
+++ b/index/necklace.html
@@ -6,7 +6,7 @@
     <meta content="jewelry, sale, online" />
     <meta description="jewelry-for-sale" />
     <title>Zoe's Jewelry</title>
-    <link rel="stylesheet" type="text/css" href="../css/necklace.css">
+    <link rel="stylesheet" type="text/css" href="necklace.css">
     
     </head>
     
