files renames and paths

--- a/index/index.html
+++ b/index/index.html
@@ -53,10 +53,10 @@
     <div class="swiper">
 
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="../img/earrings.jpeg" /></div>
-        <div class="swiper-slide"><img src="../img/58-mystik-nk-197.jpg" /></div>
-        <div class="swiper-slide"><img src="../img/bracelets.jpeg" /></div>
-        <div class="swiper-slide"><img src="../img/rings.jpeg" /></div>
+        <div class="swiper-slide"><img src="img/earrings.jpeg" /></div>
+        <div class="swiper-slide"><img src="img/58-mystik-nk-197.jpg" /></div>
+        <div class="swiper-slide"><img src="img/bracelets.jpeg" /></div>
+        <div class="swiper-slide"><img src="img/rings.jpeg" /></div>
       </div>
 
       <div class="swiper-pagination"></div>
