--- a/index/necklace.html
+++ b/index/necklace.html
@@ -25,10 +25,10 @@
     </div>
     <div id="images">
         <hr>
-        <img src="../necklacecatalogue/neclace1.jpeg" width="210">
-        <img src="../necklacecatalogue/necklace2.jpeg" width="210">
-        <img src="../necklacecatalogue/necklace3.jpeg" width=210>
-        <img src="../necklacecatalogue/necklace4.jpeg" width="210">
+        <img src="necklacecatalogue/neclace1.jpeg" width="210">
+        <img src="necklacecatalogue/necklace2.jpeg" width="210">
+        <img src="necklacecatalogue/necklace3.jpeg" width=210>
+        <img src="necklacecatalogue/necklace4.jpeg" width="210">
     </div>
         <div id="prices">
         <p>29.99$</p>
