--- a/index/earrings.html
+++ b/index/earrings.html
@@ -23,22 +23,22 @@
         <hr>
             <div class="grid-container" id="grid-list">
                 <div class="grid-item" name="icon" >
-                    <img src="../earringcatalogue/OIP%20(2).jpeg">
+                    <img src="earringcatalogue/OIP2.jpeg">
                     <p id="price">29.99$</p>
                     <input type="button" value="Add to cart" id="btn-9">
                 </div>
                 <div class="grid-item" name="icon">
-                    <img src="../earringcatalogue/OIP%20(1).jpeg">
+                    <img src="earringcatalogue/OIP1.jpeg">
                     <p id="price">39.99$</p>
                     <input type="button" value="Add to cart" id="btn-9">
                 </div>
                 <div class="grid-item" name="icon">
-                    <img src="../earringcatalogue/OIP.jpeg">
+                    <img src="earringcatalogue/OIP.jpeg">
                     <p id="price">19.99$</p>
                     <input type="button" value="Add to cart" id="btn-9">
                 </div>
                 <div class="grid-item" name="icon">
-                    <img src="../earringcatalogue/th.jpeg">
+                    <img src="earringcatalogue/th.jpeg">
                     <p id="price">14.99$</p>
                     <input type="button" value="Add to cart" id="btn-9">
                 </div>
